# EchoVLM

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  50samples.py  EchoPrimeDemo.ipynb  MIMICdataset.py  Makefile  README.md  RESTRUCTURE_SUMMARY.md  ViewClassificationDemo.ipynb  clean_pixel_data.py  debug_dicoms.py  debug_weights.py  done_dirs.txt  download.py  fix_view_classifier.py  output.txt  process_captions.ipynb  process_captions.py  processed_CV_images_tinyllava-6-24-24-test.json  pyproject.toml  run.py  run_clean_batch.sh  slurm-56860555.out  slurm-56956251.out  slurm-56974457.out  slurm-56978565.out  slurm-56979446.out  slurm-57068348.out  slurm-57070053.out  slurm-57070131.out  slurm-57070169.out  slurm-57119707.out  slurm-57119717.out  slurm-57119720.out  slurm-57330321.out  slurm-57387354.out  slurm-57461821.out  slurm-57768541.out  (+11 more)
500samples/: 500samples.py  VC quality control.jsonl  evaluation.py
configs/: default.yaml  gcp.yaml  sample_manifest.csv
data/500samples/: combined_views.json  convert_to_combine.py
output_batches_test/: batch_0_99.json  batch_10000_10099.json  batch_1000_1099.json  batch_100_199.json  batch_10100_10199.json  batch_10200_10299.json  batch_10300_10399.json  batch_10400_10499.json  batch_10500_10599.json  batch_10600_10699.json  batch_10700_10799.json  batch_10800_10899.json  batch_10900_10999.json  batch_11000_11099.json  batch_1100_1199.json  batch_11100_11199.json  batch_11200_11299.json  batch_11300_11399.json  batch_11400_11499.json  batch_11500_11599.json  batch_11600_11699.json  batch_11700_11799.json  batch_11800_11899.json  batch_11900_11999.json  batch_12000_12099.json  batch_1200_1299.json  batch_12100_12199.json  batch_12200_12299.json  batch_12300_12399.json  batch_12400_12499.json  batch_12500_12599.json  batch_12600_12699.json  batch_12700_12799.json  batch_12800_12899.json  batch_12900_12999.json  batch_13000_13099.json  batch_1300_1399.json  batch_13100_13199.json  batch_13200_13299.json  batch_13300_13399.json  (+121 more)
output_batches_train/: batch_0_999.json  batch_100000_100999.json  batch_10000_10999.json  batch_1000_1999.json  batch_101000_101999.json  batch_102000_102999.json  batch_103000_103999.json  batch_104000_104999.json  batch_105000_105999.json  batch_106000_106999.json  batch_107000_107999.json  batch_108000_108999.json  batch_109000_109999.json  batch_110000_110999.json  batch_11000_11999.json  batch_111000_111999.json  batch_112000_112999.json  batch_113000_113999.json  batch_114000_114999.json  batch_115000_115999.json  batch_116000_116999.json  batch_117000_117999.json  batch_118000_118999.json  batch_119000_119999.json  batch_120000_120999.json  batch_12000_12999.json  batch_121000_121999.json  batch_122000_122999.json  batch_123000_123999.json  batch_124000_124999.json  batch_125000_125999.json  batch_126000_126999.json  batch_127000_127999.json  batch_128000_128644.json  batch_13000_13999.json  batch_14000_14999.json  batch_15000_15999.json  batch_16000_16999.json  batch_17000_17999.json  batch_18000_18999.json  (+89 more)
output_batches_val/: batch_0_1.json  batch_0_99.json  batch_10000_10099.json  batch_1000_1099.json  batch_100_199.json  batch_10100_10199.json  batch_10200_10299.json  batch_10300_10399.json  batch_10400_10499.json  batch_10500_10599.json  batch_10600_10699.json  batch_10700_10799.json  batch_10800_10899.json  batch_10900_10999.json  batch_11000_11099.json  batch_1100_1199.json  batch_11100_11199.json  batch_11200_11299.json  batch_11300_11399.json  batch_11400_11499.json  batch_11500_11599.json  batch_11600_11699.json  batch_11700_11799.json  batch_11800_11899.json  batch_11900_11999.json  batch_12000_12099.json  batch_1200_1299.json  batch_12100_12199.json  batch_12200_12299.json  batch_12300_12399.json  batch_12400_12499.json  batch_12500_12599.json  batch_12600_12699.json  batch_12700_12799.json  batch_12800_12899.json  batch_12900_12999.json  batch_13000_13099.json  batch_1300_1399.json  batch_13100_13199.json  batch_13200_13299.json  (+126 more)
src/echo_infer/: README.md  __init__.py  cli.py  config.py  pipeline.py
src/echo_infer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/echo_infer/adapters/: __init__.py  dataset_adapter.py  model_adapter.py
src/echo_infer/utils/: __init__.py  io.py  logging.py
src/echo_qa/: README.md  __init__.py  cli.py  setup.py  submit_test.sh  submit_train.sh  submit_val.sh
src/echo_qa/core/: __init__.py  api_client.py  processor.py
src/echo_qa/examples/: basic_usage.py
src/echo_qa/tests/: __init__.py  test_basic.py
src/echo_qa/utils/: __init__.py  config.py  io.py  logging.py
tests/: __init__.py  test_cli.py  test_output_format.py  test_smoke.py
