[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-vlm"
version = "0.1.0"
description = "EchoVLM - Comprehensive framework for medical image analysis and question answering using vision-language models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EchoPrime Team", email = "team@echoprime.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    # Core ML dependencies
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "opencv-python>=4.5.0",
    "pydicom>=2.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "typer>=0.7.0",
    "rich>=12.0.0",
    "transformers>=4.20.0",
    # EchoQA dependencies
    "openai>=1.0.0",
    "pathlib2>=2.3.0; python_version < '3.4'",
    "typing-extensions>=4.0.0; python_version < '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=22.0.0",
    "pre-commit>=2.20.0",
]

[project.scripts]
echo-infer = "echo_infer.cli:app"
echo-qa = "echo_qa.cli:main"

[project.urls]
Homepage = "https://github.com/echoprime/echo-vlm"
Repository = "https://github.com/echoprime/echo-vlm"
Documentation = "https://github.com/echoprime/echo-vlm#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "cv2.*",
    "pydicom.*",
    "sklearn.*",
    "matplotlib.*",
    "typer.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py38']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests", "src/echo_qa/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/echo_infer,src/echo_qa",
    "--cov-report=term-missing",
    "--cov-report=html",
]
